# work

./: README.md  README_merged.md  README_new.md  atlas_label_material_map.json  cli.py  combined_data_cell_v_AP_projected_to_nerve50_1mm.mat  pyproject.toml  requirements.txt  s4l_materials_unified.json  test_adaptive_voxel.py  tissue_groups.py
docs/: mechanical-parameters-73.csv  mechanical-parameters-73.json  mechanical-parameters-sources.md  mesh-domain-policy.csv  mesh-domain-policy.json  tissue-labels-and-materials.md  week2-to-current-assessment.md
examples/: demo-expand.json  demo-shrink.json  demo-shrink.npz  human-voxel-coarse.npz  human-voxel-convert.json  human-voxel-surface.npz  independent-skin-expand-map.json  independent-skin-expand.npz  independent-skin-surface.npz  mat-converted-mesh.npz  mat-converted-surface.npz  materials.example.json
outputs/: human-coarse.npz  human-convert.json  human-sat-080.json  human-sat-080.npz  human-sat-120.json  human-sat-120.npz  human-surface-map-080.json  human-surface-map.json  human-surface.npz
sat-morphing-fem/examples/: demo-expand.npz  demo-expand.vtu  demo-shrink.vtu  independent-skin-expand-centers.npz  mat-converted-report.json  mat-input-example.mat
src/satmorph/: __init__.py  adaptive_growth.py  cli.py  (+24 more)
tests/: test_adaptive_voxel.py  test_audit.py  test_contact_calibration.py  test_mat_convert.py  test_material.py  test_material_remesh_mass.py  test_metrics.py  test_solver.py  test_study.py  test_surface_map.py  test_tissue_groups.py  test_tissue_surface.py  test_visual_surface.py  test_voxel_convert.py
