[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sat-morphing-fem"
version = "0.1.0"
description = "Research prototype for physics-based subcutaneous adipose tissue morphing"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "meshio>=5.3",
]

[project.optional-dependencies]
preprocess = ["pymeshfix>=0.17", "pyvista>=0.43"]
mat = ["h5py>=3.10"]
visual = ["scikit-image>=0.22"]
test = ["pytest>=8"]

[project.scripts]
satmorph = "satmorph.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
